# font-fetcher

./: .gitignore  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: release.yml  test.yml
font_fetcher/: __init__.py  misc.py  ocp.py  ocp_test.py  repo.py  repo_1001fonts.py  repo_common.py  repo_registry.py  repo_test.py
