[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "font-fetcher"
version = "0.0.8"
description = ""
authors = [
    { name = "Yeicor", email = "4929005+Yeicor@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0"
]

[dependency-groups]
test = [
    "pytest>=9.0.0",
    "build123d>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "DEBUG"
